[metadata]
license-files = LICENSE.txt


[flake8]
max-line-length = 95
ignore =
  # F541: f-string is missing placeholders
  F541,
  # W503: line break before binary operator
  W503,
  # E731 do not assign a lambda expression, use a def
  E731,
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # allow to use \dot
  W605
exclude =
  src/daria/__init__.py,
