[metadata]
license-files = LICENSE.txt



[tool:pytest]
python_files = tests/*.py

[tool:isort]
skip = src/darsia/__init__.py

[flake8]
max-line-length = 95
ignore =
  # F541: f-string is missing placeholders
  F541,
  # W503: line break before binary operator
  W503,
  # E731 do not assign a lambda expression, use a def
  E731,
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # allow to use \dot
  W605
  # Multiple statements on each line - this conflicts with black's preferences
  E701
  E704
exclude =
  src/darsia/__init__.py,
  src/darsia/corrections/color/__init__.py,